# libdash

./: README.md
libdash/android/: ANDROID.md  CMakeLists.txt
libdash/android/dash/: AndroidManifest.xml
libdash/android/dash/jni/: Application.mk
libdash/android/dash/jni/dependencies/: Android.mk
libdash/android/dash/jni/libdash/: Android.mk
libdash/android/jni/libdash/: Android.mk
libdash/android/jni/libdash/source/: create_jni_header_files  jni_helper.cpp  jni_helper.hpp  net_bitmovin_libdash_metrics_HTTPTransaction.cpp  net_bitmovin_libdash_metrics_HTTPTransaction.h  net_bitmovin_libdash_metrics_TCPConnection.cpp  net_bitmovin_libdash_mpd_AbstractMPDElement.cpp  net_bitmovin_libdash_mpd_BaseUrl.cpp  net_bitmovin_libdash_mpd_BaseUrl.h  net_bitmovin_libdash_mpd_ContentComponent.cpp  net_bitmovin_libdash_mpd_ContentComponent.h  net_bitmovin_libdash_mpd_Descriptor.cpp  net_bitmovin_libdash_mpd_Descriptor.h  net_bitmovin_libdash_mpd_MPD.cpp  net_bitmovin_libdash_mpd_MPD.h  net_bitmovin_libdash_mpd_Metrics.h  net_bitmovin_libdash_mpd_MultipleSegmentBase.cpp  net_bitmovin_libdash_mpd_MultipleSegmentBase.h  net_bitmovin_libdash_mpd_Period.cpp  net_bitmovin_libdash_mpd_Period.h  net_bitmovin_libdash_mpd_ProgramInformation.cpp  net_bitmovin_libdash_mpd_ProgramInformation.h  net_bitmovin_libdash_mpd_Range.cpp  net_bitmovin_libdash_mpd_Range.h  net_bitmovin_libdash_mpd_Representation.h  net_bitmovin_libdash_mpd_RepresentationBase.cpp  net_bitmovin_libdash_mpd_RepresentationBase.h  (+17 more)
libdash/android/sample/: AndroidManifest.xml
libdash/android/test/: AndroidManifest.xml
(+141 files in other folders)
